--- a/.config/ags/style.css
+++ b/.config/ags/style.css
@@ -29,15 +29,15 @@ label {
   box-shadow: 0 0 4px 0 #000;
 }
 
-.barIconTag {
+.barIconSearch {
   margin: 10px 0 10px 8px;
-  padding: 2px 7px 1px 6px;
+  padding: 7px 12px 4px 11px;
   border: 1px solid #eeeeee;
 }
 
 .barIconHome {
   margin: 10px 8px 10px 0;
-  padding: 5px 7px 0 6px;
+  padding: 7px 0 0 11px;
   border: 1px solid #eeeeee;
 }
 
